--- a/blog.html
+++ b/blog.html
@@ -62,97 +62,42 @@
     <section class="ftco-section bg-light">
         <div class="container-xl">
             <div class="row">
-                <div class="col-md-6 col-lg-3 d-flex">
-                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
-                        <a href="blog-single.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_1.jpg');">
-                        </a>
-                        <div class="text">
-                            <p class="meta"><span>Admin</span> <span>Jan. 07, 2021</span><a href="#">3 Comments</a></p>
-                            <h3 class="heading mb-3"><a href="#">The Newest and Updated Bootstrap 5 is Here</a></h3>
-                            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                        </div>
-                    </div>
-                </div>
+
+                <!-- ARTICLE : Les bases du CSS  -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                        <a href="blog-single.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_2.jpg');">
+                        <a href="blog-css-bases.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_2.jpg');">
                         </a>
                         <div class="text">
-                            <p class="meta"><span>Admin</span> <span>Jan. 07, 2021</span><a href="#">3 Comments</a></p>
-                            <h3 class="heading mb-3"><a href="#">The Newest and Updated Bootstrap 5 is Here</a></h3>
-                            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                            <p class="meta"> <span>1er août 2021</span>
+                                <span style="color:rgb(196, 170, 100)">CSS</span>
+                            </p>
+                            <h3 class="heading mb-3"><a href="blog-css-bases.html">Les bases du CSS</a></h3>
+                            <p>Le CSS est parfois compliqué à maîtriser quand on débute. Voici les notions de base que j'aurais aimé maîtriser quand j'ai débuté pour la première fois.</p>
                         </div>
                     </div>
                 </div>
+
+                <!-- ARTICLE : Les Go Modules  -->
                 <div class="col-md-6 col-lg-3 d-flex">
-                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
-                        <a href="blog-single.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
+                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
+                        <a href="blog-go-modules.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_1.jpg');">
                         </a>
                         <div class="text">
-                            <p class="meta"><span>Admin</span> <span>Jan. 07, 2021</span><a href="#">3 Comments</a></p>
-                            <h3 class="heading mb-3"><a href="#">The Newest and Updated Bootstrap 5 is Here</a mb-3></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>              
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex">
-            <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
-              <a href="blog-single.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_4.jpg');">
-              </a>
-                                <div class="text">
-                                    <p class="meta"><span>Admin</span> <span>Jan. 07, 2021</span><a href="#">3 Comments</a></p>
-                                    <h3 class="heading mb-3"><a href="#">The Newest and Updated Bootstrap 5 is Here</a mb-3></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>              
-              </div>
-            </div>
-          </div>
+                            <p class="meta"> <span>29 juillet 2021</span>
+                                <span style="color:rgb(196, 170, 100)">Golang</span>
+                            </p>
+                            <h3 class="heading mb-3"><a href="blog-go-modules.html">Comment utiliser les modules Go</a></h3>
+                            <p>Un petit guide très rapide pour se familiariser avec les Go Modules.</p>
+                        </div>
+                    </div>
+                </div>
 
-          <div class="col-md-6 col-lg-3 d-flex">
-            <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
-              <a href="blog-single.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_5.jpg');">
-              </a>
-                                        <div class="text">
-                                            <p class="meta"><span>Admin</span> <span>Jan. 07, 2021</span><a href="#">3 Comments</a></p>
-                                            <h3 class="heading mb-3"><a href="#">The Newest and Updated Bootstrap 5 is Here</a></h3>
-                                            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                                        </div>
-                                </div>
-                        </div>
-                        <div class="col-md-6 col-lg-3 d-flex">
-                            <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                                <a href="blog-single.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_6.jpg');">
-                                </a>
-                                <div class="text">
-                                    <p class="meta"><span>Admin</span> <span>Jan. 07, 2021</span><a href="#">3 Comments</a></p>
-                                    <h3 class="heading mb-3"><a href="#">The Newest and Updated Bootstrap 5 is Here</a></h3>
-                                    <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-3 d-flex">
-                            <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
-                                <a href="blog-single.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_7.jpg');">
-                                </a>
-                                <div class="text">
-                                    <p class="meta"><span>Admin</span> <span>Jan. 07, 2021</span><a href="#">3 Comments</a></p>
-                                    <h3 class="heading mb-3"><a href="#">The Newest and Updated Bootstrap 5 is Here</a mb-3></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>              
-              </div>
+
+
             </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex">
-            <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
-              <a href="blog-single.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_8.jpg');">
-              </a>
-                                        <div class="text">
-                                            <p class="meta"><span>Admin</span> <span>Jan. 07, 2021</span><a href="#">3 Comments</a></p>
-                                            <h3 class="heading mb-3"><a href="#">The Newest and Updated Bootstrap 5 is Here</a mb-3></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>              
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-5">
+
+            <!-- <div class="row mt-5">
           <div class="col text-center">
             <div class="block-27">
               <ul>
@@ -166,8 +111,8 @@
                                                 </ul>
                                         </div>
                                 </div>
-                            </div>
-                        </div>
+                            </div> -->
+        </div>
     </section>
 
     <footer class="ftco-footer">
