New blog articles

--- a/blog-css-bases.html
+++ b/blog-css-bases.html
@@ -179,7 +179,7 @@
                         <div class="bio me-md-4 img" style="background-image: url(images/person_1.jpg);"></div>
                         <div class="desc">
                             <h3>Nicolas Lépinay</h3>
-                            <p>Étudiant en informatique et curieux de tout.
+                            <p>Étudiant en informatique, féru d'UI/UX design et curieux de tout.
                             </p>
                         </div>
                     </div>
