--- a/blog.html
+++ b/blog.html
@@ -63,6 +63,36 @@
         <div class="container-xl">
             <div class="row">
 
+                <!-- ARTICLE : Rem, Em, Px  -->
+                <div class="col-md-6 col-lg-3 d-flex">
+                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <a href="blog-rem-em-px.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_4.jpg');">
+                        </a>
+                        <div class="text">
+                            <p class="meta"> <span>9 août 2021</span>
+                                <span style="color:rgb(196, 170, 100)">CSS</span>
+                            </p>
+                            <h3 class="heading mb-3"><a href="blog-css-bases.html">CSS : rem, em ou px ?</a></h3>
+                            <p>Présentation et particularités des différentes unités de mesure en CSS : les rem, les em et les pixels.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- ARTICLE : Ada Lovelace  -->
+                <div class="col-md-6 col-lg-3 d-flex">
+                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <a href="blog-ada-lovelace.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
+                        </a>
+                        <div class="text">
+                            <p class="meta"> <span>5 août 2021</span>
+                                <span style="color:rgb(196, 170, 100)">Tech</span>
+                            </p>
+                            <h3 class="heading mb-3"><a href="blog-css-bases.html">Ada Lovelace, inventrice de la programmation</a></h3>
+                            <p>Qui était Ada Lovelace, inventrice du premier programme informatique ?</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- ARTICLE : Les bases du CSS  -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
