--- a/blog-ada-lovelace.html
+++ b/blog-ada-lovelace.html
@@ -55,8 +55,8 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-end justify-content-center">
                 <div class="col-md-9 pt-5 text-center">
-                    <p class="breadcrumbs"><span class="me-2"><a href="index.html">Accueil <i class="fa fa-chevron-right"></i></a></span> <span class="me-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Comment utiliser Go Modules <i class="fa fa-chevron-right"></i></span></p>
-                    <h1 class="mb-0 bread">Guide d'utilisation de Go Modules</h1>
+                    <p class="breadcrumbs"><span class="me-2"><a href="index.html">Accueil <i class="fa fa-chevron-right"></i></a></span> <span class="me-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Qui était Ada Lovelace ? <i class="fa fa-chevron-right"></i></span></p>
+                    <h1 class="mb-0 bread">Qui était Ada Lovelace, inventrice du premier programme informatique ?</h1>
                 </div>
             </div>
         </div>
@@ -66,45 +66,41 @@
         <div class="container">
             <div class="row g-lg-5">
                 <div class="col-lg-8 blog-single">
-                    <p>J'ai récemment commencé à utiliser Go Modules, l'outil de gestion des dépendances intégré à Go, et si comme moi vous étiez habitué à govendor ou dep, cela risque de vous changer un peu. D'où la nécessité de cet article aujourd'hui.
+                    <p>À 12 ans, elle écrit déjà un traité sur les ailes des oiseaux afin de fabriquer une machine volante, mais c’est à 17 ans que sa vie va être bouleversée par une rencontre.</p>
+                    <p>
+                        <img src="images/ada_lovelace.jpg" alt="" class="img-fluid">
                     </p>
 
-                    <h2 class="mb-3">Placez votre code ailleurs que dans le GOPATH</h2>
+                    <p>Les premiers programmes informatiques remontent à l'année 1840. Et à l’origine de tout ça, il y a une femme nommée Ada Lovelace. Née Byron en 1815, il s'agit de la fille du célèbre poète Lord Byron. Son père quitte le domicile conjugal
+                        alors qu'Ada n'a qu'un an. Elle ne le reverra jamais. Sa mère, Annabella, par peur que sa fille épouse le métier de son père l’oriente vers une discipline radicalement opposée : les sciences mathématiques. Et elle s'avèrera particulièrement
+                        douée pour ça ! </p>
 
-                    <p>On peut techniquement utiliser Go Modules à l'intérieur du <code>gopath</code>, mais il faudra alors déclarer <code>GO111MODULES=on</code> dans vos variables d'environement. Cela étant dit, le but premier des modules est de ne pas
-                        avoir à mettre son code dans le <code>gopath</code>, donc évitez de faire ça.</p>
+                    <p>À 12 ans, elle écrit déjà un traité sur les ailes des oiseaux afin de fabriquer une machine volante, mais c’est à 17 ans que sa vie va être bouleversée par une rencontre.</p>
 
-                    <h2 class="mb-3">Initialisez Go Modules</h2>
+                    <h2 class="mb-3 mt-5">Le premier algorithme créé grâce à une calculatrice mécanique</h2>
 
-                    <p>Positionnez vous dans le dossier de votre projet Go et exécutez cette commande dans votre terminal :</p>
+                    <p>Grâce à sa renommée, elle est désormais la bienvenue dans les salons mondains de Londres où elle rencontre un certain Charles Babbage. Lui aussi travaille dans les mathématiques. Il vient d’ailleurs d’inventer une calculatrice mécanique
+                        inspirée des métiers à tisser et qui fonctionne grâce à des cartes perforées. Elle aide alors Charles Babbage à perfectionner sa calculatrice en construisant une machine analytique considérée aujourd’hui comme l’ancêtre de l’ordinateur.</p>
 
-                    <pre><code class="language-bash">go mod init <strong>nom-de-votre-module</strong></code></pre>
+                    <p>Mais Ada Lovelace va encore plus loin. S’inspirant d’un article d’un mathématicien italien, elle a une idée de génie : et si au lieu de ne manier que des chiffres cette machine pouvait également manier des variables, des concepts et
+                        des données ? Elle s’y attèle puis publie en 1843 une série de notes qui contiendront le tout premier algorithmede l'histoire. Elle vient d’inventer le premier programme informatique. La suite sera malheureusement moins rose pour
+                        Ada…
+                    </p>
 
-                    <p><code>nom-de-votre-module</code> peut être n'importe quel nom que vous souhaiteriez donner à votre module. Celui-ci doit être évidemment être unique pour éviter les conflits entre différents modules.</p>
-                    <p>Cela génère un fichier <code>go.mod</code>, auquel il va falloir ajouter les dépendances du projet grâce à la commande <code>go get</code> suivante :</p>
+                    <h2 class="mb-3">Enfin la reconnaissance en 1979</h2>
 
-                    <pre><code class="language-bash">go get -u ./...</code></pre>
+                    <p>Pour financer le développement et la fabrication de sa machine qui n’existe que sur papier, elle se met à jouer aux jeux de hasard. Elle tentera même d’inventer un algorithme pour gagner aux courses. En vain. Elle dilapide tout son
+                        argent et finit ruinée. Et un malheur n’arrivant jamais seul, son médecin lui découvre un cancer de l’utérus. Elle mourra au même âge que son père Lord Byron, à 36 ans.
+                    </p>
 
-                    <p>Cela va automatiquement ajouter au fichier <code>go.mod</code> toutes les dépendances/imports actuels de votre projet et générer un fichier <code>go.sum</code> qu'il est inutile de modifier.</p>
+                    <p>Longtemps oubliée, Ada Lovelace obtient enfin la reconnaissance en 1979 quand le département de la Défense Américain nommera un nouveau langage informatique en son nom : Ada. Google lui consacre une journée en 2012 en modifiant son
+                        logo en hommage aux travaux d'Ada Lovelace. Celle qui fut à jamais la première à créer un programme informatique.
+                    </p>
 
-                    <h2 class="mb-3 mt-5">Ajoutez les dépendances au vendor</h2>
-                    <p>Exécutez cette commande :</p>
-                    <pre><code class="language-bash">go mod vendor</code></pre>
-                    <p>Cela générera un dossier vendor and ajoutera une copie de chaque dépendance présente dans le fichier <code>go.mod</code> à l'intérieur du dossier.</p>
-
-                    <h2 class="mb-3 mt-5">Mettre à jour une dépendance</h2>
-                    <p>Exécutez cette commande :</p>
-                    <pre><code class="language-bash">
-    go get -u <strong>url-du-repo</strong>
-    go mod vendor
-                    </code></pre>
-
-                    <p>Cela mettra à jour la version de l'import dans le fichier <code>go.mod</code>, puis le code dans votre dossier vendor.</p>
-
-                    <p>Et voilà pour les bases des Go Modules !</p>
                     <div class="tag-widget post-tag-container mb-5 mt-5">
                         <div class="tagcloud">
-                            <a href="#" class="tag-cloud-link">golang</a>
+                            <a href="#" class="tag-cloud-link">technologie</a>
+                            <a href="#" class="tag-cloud-link">histoire</a>
                         </div>
                     </div>
 
