--- a/blog-rem-em-px.html
+++ b/blog-rem-em-px.html
@@ -55,8 +55,8 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-end justify-content-center">
                 <div class="col-md-9 pt-5 text-center">
-                    <p class="breadcrumbs"><span class="me-2"><a href="index.html">Accueil <i class="fa fa-chevron-right"></i></a></span> <span class="me-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Comment utiliser Go Modules <i class="fa fa-chevron-right"></i></span></p>
-                    <h1 class="mb-0 bread">Guide d'utilisation de Go Modules</h1>
+                    <p class="breadcrumbs"><span class="me-2"><a href="index.html">Accueil <i class="fa fa-chevron-right"></i></a></span> <span class="me-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>CSS : rem, em ou pixels ? <i class="fa fa-chevron-right"></i></span></p>
+                    <h1 class="mb-0 bread">Faut-il utiliser les rem, em ou pixels ?</h1>
                 </div>
             </div>
         </div>
@@ -66,45 +66,87 @@
         <div class="container">
             <div class="row g-lg-5">
                 <div class="col-lg-8 blog-single">
-                    <p>J'ai récemment commencé à utiliser Go Modules, l'outil de gestion des dépendances intégré à Go, et si comme moi vous étiez habitué à govendor ou dep, cela risque de vous changer un peu. D'où la nécessité de cet article aujourd'hui.
+                    <p>Les unités de mesure <code>rem</code> et <code>em</code> offrent des avantages indéniables par rapport aux classiques <code>px</code>.
                     </p>
 
-                    <h2 class="mb-3">Placez votre code ailleurs que dans le GOPATH</h2>
+                    <p>En utilisant les pixels, on code en dur la taille des éléments pour tous les utilisateurs. Il n'y a alors plus aucune façon pour eux de modifier la taille de la police, par exemple. Cela peut poser problème pour ceux qui souhaiterait
+                        augmenter la taille du texte par rapport aux <code>16px</code> par défaut.</p>
 
-                    <p>On peut techniquement utiliser Go Modules à l'intérieur du <code>gopath</code>, mais il faudra alors déclarer <code>GO111MODULES=on</code> dans vos variables d'environement. Cela étant dit, le but premier des modules est de ne pas
-                        avoir à mettre son code dans le <code>gopath</code>, donc évitez de faire ça.</p>
+                    <h2 class="mb-3">Comment fonctionnent les rem ?</h2>
 
-                    <h2 class="mb-3">Initialisez Go Modules</h2>
+                    <p>Les <code>rem</code> et <code>em</code> sont des unités de mesure relatives dont beaucoup de développeurs tirent parti pour préserver l'accessibilité.</p>
 
-                    <p>Positionnez vous dans le dossier de votre projet Go et exécutez cette commande dans votre terminal :</p>
+                    <p><code>Rem</code> (root em) signifie "root element's font-size" (en français, taille de police de l'élément racine). Généralement, cette taille de police par défaut est de <code>16px</code>. Donc si vous voyez une propriété <code>font-size: 1rem</code>                        , cela signifie que la taille de l'élément est de 16 pixels.</p>
+                    <p>Puisque <strong>rem</strong> fait référence à l'élément racine, cela signifie qu'on peut remplacer la valeur par défaut de la taille de police en ajoutant une ligne de CSS :</p>
 
-                    <pre><code class="language-bash">go mod init <strong>nom-de-votre-module</strong></code></pre>
 
-                    <p><code>nom-de-votre-module</code> peut être n'importe quel nom que vous souhaiteriez donner à votre module. Celui-ci doit être évidemment être unique pour éviter les conflits entre différents modules.</p>
-                    <p>Cela génère un fichier <code>go.mod</code>, auquel il va falloir ajouter les dépendances du projet grâce à la commande <code>go get</code> suivante :</p>
-
-                    <pre><code class="language-bash">go get -u ./...</code></pre>
-
-                    <p>Cela va automatiquement ajouter au fichier <code>go.mod</code> toutes les dépendances/imports actuels de votre projet et générer un fichier <code>go.sum</code> qu'il est inutile de modifier.</p>
-
-                    <h2 class="mb-3 mt-5">Ajoutez les dépendances au vendor</h2>
-                    <p>Exécutez cette commande :</p>
-                    <pre><code class="language-bash">go mod vendor</code></pre>
-                    <p>Cela générera un dossier vendor and ajoutera une copie de chaque dépendance présente dans le fichier <code>go.mod</code> à l'intérieur du dossier.</p>
-
-                    <h2 class="mb-3 mt-5">Mettre à jour une dépendance</h2>
-                    <p>Exécutez cette commande :</p>
-                    <pre><code class="language-bash">
-    go get -u <strong>url-du-repo</strong>
-    go mod vendor
+                    <pre><code class="language-css">
+    :root {
+        font-size: 20px;
+    }                          
                     </code></pre>
 
-                    <p>Cela mettra à jour la version de l'import dans le fichier <code>go.mod</code>, puis le code dans votre dossier vendor.</p>
+                    <p>Désormais, <code>1rem = 20px</code>.</p>
 
-                    <p>Et voilà pour les bases des Go Modules !</p>
+                    <h2 class="mb-3">Quid des valeurs qui ne sont pas des multiples de 16px ?</h2>
+
+                    <p>On peut passer d'une valeur en pixel en valeur rem en la divisant par 16. Par exemplen, pour utiliser une taille de police de 20px, on peut écrire <code>font-size: 1.25rem</code>.</p>
+                    <p>Ce qui correspond à 20 divisé par 16.</p>
+
+                    <h2 class="mb-3">Ce n'est pas très commode, non ?</h2>
+
+                    <p>En effet. Utiliser des <strong>rem</strong> va forcément prendre un peu plus de temps que d'utiliser des pixels puisqu'il faudra convertir les valeurs aux préalable.</p>
+                    <p>L'avantage, c'est que l'utilisateur y gagne en liberté et l'accessibilité n'est pas entravée. L'utilisateur pourra modifier la taille de la police en ajustant la taille de l'élément racine, de cette façon :</p>
+
+                    <p>
+                        <img src="images/rem-px.gif" alt="" class="img-fluid">
+                    </p>
+
+                    <h2 class="mb-3">Comment fonctionnent les em ?</h2>
+
+                    <p><code>Em</code> signifie "parent element's font-size" (en français, taille de police de l'élément parent).</p>
+                    <p>Comme le CSS fonctionne en cascade et prend en compte l'héritage, la valeur de l'unité <code>em</code> va hériter de celle de la taille de l'élément parent.</p>
+                    <p>Par exemple, prenons une <code>div</code> parente et un paragraphe enfant à l'intérieur :</p>
+                    <p><strong>HTML :</strong></p>
+
+                    <pre><code class="language-markup">
+    &lt;div&gt;
+        &lt;p&gt;Hello world !&lt;/p&gt;
+    &lt;/div&gt;                   
+                    </code></pre>
+
+                    <p><strong>CSS :</strong></p>
+                    <pre><code class="language-css">
+    div {
+        font-size: 0.5rem; // 8px
+    }
+    
+    p {
+    font-size: 1em; // ??px
+    }                 
+                    </code></pre>
+
+                    <p>Comme <code>p</code> hérite de la taille de police de son élément parent, on a <code>1em = 8px</code>.<br> Donc <code>p</code> aura la propriété <code>font-size: 8px</code>.</p>
+
+                    <p>Ce système peut prêter à confusion et est propice aux erreurs. C'est pourquoi il n'est pas recommandé d'utiliser les <strong>em</strong> pour les tailles de police, et de toujours utiliser <strong>rem</strong> à la place par cohérence.</p>
+
+                    <h2 class="mb-3">Quand utiliser les em ?</h2>
+                    <p>Grâce à l'héritage, les unités <strong>em</strong> se réveleront utiles pour les propriétés <code>padding</code> et <code>margin</code>. Grâce aux em, l'échelle des proportions sera plus facilement respectée.
+                    </p>
+
+                    <p><img src="images/rem-em.jpg" alt="" class="img-fluid"></p>
+
+                    <p>Ici, on voit bien qu'en utilisant les <strong>em</strong>, le padding reste proportionnel à la taille du texte. En revanche, avec les <strong>rem</strong>, le padding a la même taille chez les deux boutons, indépendamment de la taille
+                        des deux textes.</p>
+
+                    <h2 class="mb-3">Faut-il vraiment arrêter d'utiliser les px ?</h2>
+                    <p>Personnellement, je préfère utiliser les em et les rem dans les propriétés importantes comme <code>font-size, padding</code> et <code>margin</code>. En revanche, pour ce qui est de la taille des bordures par exemple, j'utilise toujours
+                        les pixels car la valeur utilisée est généralement très petite.</p>
+
+
                     <div class="tag-widget post-tag-container mb-5 mt-5">
                         <div class="tagcloud">
-                            <a href="#" class="tag-cloud-link">golang</a>
+                            <a href="#" class="tag-cloud-link">css</a>
                         </div>
                     </div>
 
